--- a/output/build.gradle
+++ b/output/build.gradle
@@ -8,6 +8,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation(project(":core"))
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+    // https://mvnrepository.com/artifact/org.odftoolkit/simple-odf
+    implementation group: 'org.odftoolkit', name: 'simple-odf', version: '0.9.0-RC1'
 }
 
 test {
